# python-project-lvl3

./: Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg  ya-ru.html
.github/workflows/: lvl3-check.yml
page_loader/: common.py  download.py  logger.py  parser.py  progress.py
page_loader/scripts/: page_loader.py
scripts/: page_loader.py
tests/: test_download.py
tests/fixtures/: before.html  ru-hexlet-io-courses.html
tests/fixtures/before/: courses.html
