[tool.poetry]
name = "hexlet-code"
version = "0.3.1"
description = "Page downloader"
authors = ["Sergey Golodyaev <gabadysergei@yandex.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
download = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
beautifulsoup4 = "^4.10.0"
progress = "^1.6"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"